# sh-ai-sdr

./: .env.example  .gitignore  README.md  SystemArchitecture.md  alembic.ini  main.py  pyproject.toml  requirements.txt
app/: config.py  data_loader.py  graph_builder.py  models.py  schema.py  system_prompt.py  tools.py  vectorstore_supabase.py  vectorstore_weaviate.py
migrations/: env.py
migrations/versions/: baa9a945add8_initial_schema.py
notebooks/: advance-RAG.ipynb  customize_gpt.ipynb
