[project]
name = "customizegpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "beautifulsoup4>=4.14.2",
    "faiss-cpu>=1.8.0",
    "gradio>=5.49.1",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=3.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pypdf>=4.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "sqlmodel>=0.0.27",
    "supabase>=2.22.3",
    "tiktoken>=0.7.0",
]
